--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <!-- Conteúdo principal -->
         <main class="content">
             <section id="emails">
-                <h1>Gerador de E-mails Automáticos</h1>
-                <p>Escolha o template de e-mail abaixo e preencha as informações necessárias.</p>
+                <h1>Bem vindo(a) WDC Ajudas</h1>
+                <p>Criado para auxiliar os membros da equipe, focado na equipe SAC.</p>
                 <!-- Aqui você pode incluir o formulário ou conteúdo do gerador de e-mails -->
                 <div id="email-template-container">
                     <!-- Template de e-mails aparecerão aqui conforme a seleção -->
@@ -32,6 +32,6 @@
             </section>
         </main>
     </div>
-    <script src="emails.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
