--- a/atalhos.html
+++ b/atalhos.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atalhos</title>
-    <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="container">
@@ -15,8 +16,10 @@
             <nav class="nav">
                 <ul>
                     <li><a href="index.html">Página Principal</a></li>
-                    <li><a href="atalhos.html" class="active">Atalhos</a></li>
-                    <li><a href="emails.html" class="active">Emails Automáticos</a></li>
+                    <li><a href="atalhos.html">Atalhos</a></li>
+                    <li><a href="emails.html">Emails Automáticos</a></li>
+                    <li><a href="pesquisas.html">Pesquisas</a></li>
+
 
                 </ul>
             </nav>
