--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emails Automáticos</title>
-    <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
+    <link rel="stylesheet" href="serial.css">
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="container">
@@ -16,7 +19,10 @@
                 <ul>
                     <li><a href="index.html">Página Principal</a></li>
                     <li><a href="atalhos.html">Atalhos</a></li>
-                    <li><a href="emails.html" class="active">Emails Automáticos</a></li>
+                    <li><a href="emails.html">Emails Automáticos</a></li>
+                    <li><a href="pesquisas.html">Pesquisas</a></li>
+
+
                 </ul>
             </nav>
         </aside>
@@ -26,6 +32,7 @@
             <section id="emails">
                 <h1>Bem vindo(a) WDC Ajudas</h1>
                 <p>Criado para auxiliar os membros da equipe, focado na equipe SAC.</p>
+                
                 <!-- Aqui você pode incluir o formulário ou conteúdo do gerador de e-mails -->
                 <div id="email-template-container">
                     <!-- Template de e-mails aparecerão aqui conforme a seleção -->
