--- a/atalhos.html
+++ b/atalhos.html
@@ -35,6 +35,8 @@
                         <ul>
                             <li>Ctrl + C: Copiar</li>
                             <li>Ctrl + V: Colar</li>
+                            <li>Ctrl + X: Cortar (Você remove o item de um local e cola em outro)</li>
+                            <li>Ctrl + y: Volta itens removidos pelo Ctrl + Z</li>
                             <li>Alt + Tab: Alternar entre janelas</li>
                             <li>Ctrl + Shift + Esc: Abrir o Gerenciador de Tarefas</li>
                             <li>Windows + D: Mostrar área de trabalho</li>
@@ -43,8 +45,8 @@
                     <div class="box">
                         <h2>Atalhos do Excel</h2>
                         <ul>
+                            <li>Shift + Scroll (Bolinha do mouse): Move a planilha para esquerda ou direita</li>
                             <li>Ctrl + S: Salvar</li>
-                            <li>Ctrl + Z: Desfazer</li>
                             <li>F4: Repetir última ação</li>
                             <li>Ctrl + Shift + L: Aplicar/Remover filtros</li>
                             <li>Alt + =: AutoSoma</li>
