--- a/nf.html
+++ b/nf.html
@@ -19,6 +19,8 @@
                     <li><a href="serial.html">Pesquisa Serial</a></li>
                     <li><a href="os.html">Abrir OS</a></li>
                     <li><a href="nf.html">Baixar NF</a></li>
+                    <li><a href="romaneio.html">Romaneio Visão</a></li>
+
                 </ul>
             </nav>
         </aside>
