--- a/emails.html
+++ b/emails.html
@@ -63,6 +63,9 @@
                         <option value="pendencias">Transportadoras - Pendências</option>
                         <option value="pendencias_lista">Pendências com lista</option>
                         <option value="nfs_retidas">NFs retidas - Notificação ao cliente</option>
+                        <option value="atrasos_detalhado">Atrasos Detalhado</option>
+                        <option value="atrasos">Atrasos</option>
+
                     </select>
                 </div>
                 
