--- a/comprar-lista.html
+++ b/comprar-lista.html
@@ -6,6 +6,8 @@
     <title>Comprar lista</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="comparar.css">
+    <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="container">
