--- a/comprar-lista.html
+++ b/comprar-lista.html
@@ -28,7 +28,7 @@
 
         <!-- Conteúdo principal -->
         <div class="content">
-            <h3>List Comparison</h3>
+            <h3>Comparar listas</h3>
             <label for="list1">Primeira lista:</label>
             <textarea id="list1" rows="10" placeholder="Insira os itens da primeira lista, um por linha"></textarea>
 
