--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emails Automáticos</title>
-    <link rel="stylesheet" href="serial.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/serial.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 
     <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
 
@@ -18,9 +18,9 @@
             <nav class="nav">
                 <ul>
                     <li><a href="index.html">Página Principal</a></li>
-                    <li><a href="comprar-lista.html">Comprar lista</a></li> 
                     <li><a href="atalhos.html">Atalhos</a></li>
                     <li><a href="emails.html">Emails Automáticos</a></li>
+                    <li><a href="automacoes.html">Automações</a></li>
                     <li><a href="pesquisas.html">Pesquisas</a></li>
 
 
@@ -46,6 +46,6 @@
             </section>
         </main>
     </div>
-    <script src="scripts.js"></script>
+    <script src="JS/scripts.js"></script>
 </body>
 </html>
