--- a/comprar-lista.html
+++ b/comprar-lista.html
@@ -17,10 +17,9 @@
             <nav class="nav">
                 <ul>
                     <li><a href="index.html">Página Principal</a></li>
-                    <li><a href="comprar-lista.html">Comparar lista</a></li>
-                    <li><a href="atalhos.html">Atalhos</a></li>
-                    <li><a href="emails.html">Emails Automáticos</a></li>
-                    <li><a href="pesquisas.html">Pesquisas</a></li>
+                    <li><a href="comprar-lista.html">Comprar lista</a></li>
+                    <li><a href="adds.html">Adicionar S</a></li>
+                    <li><a href="garantia.html">Definir garantia</a></li>
                   
                 </ul>
             </nav>
