--- a/adds.html
+++ b/adds.html
@@ -6,6 +6,8 @@
     <title>Adicionar 'S' aos Itens</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/comparar.css">
+        <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="container">
