--- a/garantia.html
+++ b/garantia.html
@@ -6,6 +6,8 @@
     <title>Verificar Garantias</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="CSS/comparar.css">
+        <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="container">
