--- a/emails.html
+++ b/emails.html
@@ -20,6 +20,7 @@
                     <li><a href="index.html">Página Principal</a></li>
                     <li><a href="atalhos.html">Atalhos</a></li>
                     <li><a href="emails.html">Emails Automáticos</a></li>
+                    <li><a href="automacoes.html">Automações</a></li>
                     <li><a href="pesquisas.html">Pesquisas</a></li>
                 </ul>
             </nav>
