--- a/atalhos.html
+++ b/atalhos.html
@@ -18,6 +18,7 @@
                     <li><a href="index.html">Página Principal</a></li>
                     <li><a href="atalhos.html">Atalhos</a></li>
                     <li><a href="emails.html">Emails Automáticos</a></li>
+                    <li><a href="automacoes.html">Automações</a></li>
                     <li><a href="pesquisas.html">Pesquisas</a></li>
 
 
