--- a/comprar-lista.html
+++ b/comprar-lista.html
@@ -17,7 +17,7 @@
             <nav class="nav">
                 <ul>
                     <li><a href="index.html">Página Principal</a></li>
-                    <li><a href="comprar-lista.html">Comprar lista</a></li>
+                    <li><a href="comprar-lista.html">Comparar lista</a></li>
                     <li><a href="adds.html">Adicionar S</a></li>
                     <li><a href="garantia.html">Definir garantia</a></li>
                   
