--- a/comprar-lista.html
+++ b/comprar-lista.html
@@ -20,6 +20,7 @@
                     <li><a href="comprar-lista.html">Comparar lista</a></li>
                     <li><a href="adds.html">Adicionar S</a></li>
                     <li><a href="garantia.html">Definir garantia</a></li>
+                    <li><a href="verificarnf.html">Verificar NF</a></li>
                   
                 </ul>
             </nav>
