--- a/automacoes.html
+++ b/automacoes.html
@@ -16,14 +16,13 @@
         <aside class="sidebar">
             <input type="text" placeholder="Pesquisar..." class="search-bar">
             <nav class="nav">
-                <ul>
+                              <ul>
                     <li><a href="index.html">Página Principal</a></li>
-                    <li><a href="comprar-lista.html">Comprar lista</a></li> 
+                    <li><a href="comprar-lista.html">Comparar lista</a></li>
                     <li><a href="adds.html">Adicionar S</a></li>
                     <li><a href="garantia.html">Definir garantia</a></li>
-
-
-
+                    <li><a href="verificarnf.html">Verificar NF</a></li>
+                    <li><a href="revendagarantia.html">Definir Garantia Revenda</a></li>
                 </ul>
             </nav>
         </aside>
