--- a/adds.html
+++ b/adds.html
@@ -21,8 +21,7 @@
                     <li><a href="adds.html">Adicionar S</a></li>
                     <li><a href="garantia.html">Definir garantia</a></li>
                     <li><a href="verificarnf.html">Verificar NF</a></li>
-
-
+                    <li><a href="revendagarantia.html">Definir Garantia Revenda</a></li>
                 </ul>
             </nav>
         </aside>
