--- a/atalhos.html
+++ b/atalhos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atalhos</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/serial.css"> 
+    <link rel="stylesheet" href="CSS/styles.css">
+    
     <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
 
 </head>
@@ -57,7 +59,6 @@
             </section>
         </main>
     </div>
-    <script src="scripts.js"></script>
-
+    <script src="JS/scripts.js"></script>
 </body>
 </html>
