--- a/comprar-lista.html
+++ b/comprar-lista.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comprar lista</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="comparar.css">
+    <title>Adicionar 'S' aos Itens</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/comparar.css">
+    
     <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
 
 </head>
@@ -28,34 +29,32 @@
 
         <!-- Conteúdo principal -->
         <div class="content">
-            <h3>Comparar listas</h3>
-            <label for="list1">Primeira lista:</label>
-            <textarea id="list1" rows="10" placeholder="Insira os itens da primeira lista, um por linha"></textarea>
+            <h3>Adicionar 'S' aos Itens</h3>
+            <label for="item-list">Lista de itens:</label>
+            <textarea id="item-list" rows="10" placeholder="Insira os itens, um por linha"></textarea>
 
-            <label for="list2">Segunda lista:</label>
-            <textarea id="list2" rows="10" placeholder="Insira os itens da segunda lista, um por linha"></textarea>
-
-            <button id="compare-btn">Compare Lists</button>
+            <button id="add-s-btn">Adicionar 'S'</button>
 
             <div id="result" class="result-box">
-                <p>Itens que estão na primeira lista mais não estão na segunda lista:</p>
-                <textarea id="unique-items" rows="10" readonly></textarea>
+                <p>Itens com 'S' adicionados:</p>
+                <textarea id="modified-items" rows="10" readonly></textarea>
             </div>
         </div>
     </div>
 
     <script>
-        document.getElementById('compare-btn').addEventListener('click', function () {
+        document.getElementById('add-s-btn').addEventListener('click', function () {
             // Get input values
-            const list1 = document.getElementById('list1').value.split('\n').map(item => item.trim()).filter(Boolean);
-            const list2 = document.getElementById('list2').value.split('\n').map(item => item.trim()).filter(Boolean);
+            const items = document.getElementById('item-list').value.split('\n').map(item => item.trim()).filter(Boolean);
 
-            // Find unique items in List 1 not in List 2
-            const uniqueItems = list1.filter(item => !list2.includes(item));
+            // Add 'S' to the beginning of each item
+            const modifiedItems = items.map(item => 'S' + item);
 
             // Display results
-            document.getElementById('unique-items').value = uniqueItems.join('\n');
+            document.getElementById('modified-items').value = modifiedItems.join('\n');
         });
     </script>
+<script src="JS/scripts.js"></script>
+
 </body>
 </html>
