--- a/emails.html
+++ b/emails.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de E-mails Automáticos</title>
-    <link rel="stylesheet" href="emails.css">
+    <link rel="stylesheet" href="CSS/emails.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
@@ -50,6 +51,7 @@
                         <option value="envio_material_devolucao">ENVIO DE MATERIAL - DEVOLUÇÃO</option>
                         <option value="postagem_correios_produtos_solar">POSTAGEM CORREIOS PRODUTOS SOLAR</option>
                         <option value="recusa_nf">Recusa NF</option>
+                        <option value="fiberhome">Informativo Fiberhome</option> <!-- Nova opção -->
 
 
                     </select>
@@ -66,6 +68,7 @@
                         <option value="nfs_retidas">NFs retidas - Notificação ao cliente</option>
                         <option value="atrasos_detalhado">Atrasos Detalhado</option>
                         <option value="atrasos">Atrasos</option>
+                        
 
                     </select>
                 </div>
@@ -180,9 +183,11 @@
             </div>
         </div>
     </div>
-    <script src="sac.js"></script>
-    <script src="apoio_vendas.js"></script>
-    <script src="emails.js"></script>
-    <script src="scripts.js"></script>
+    <script src="JS/sac.js"></script>
+    <script src="JS/apoio_vendas.js"></script>
+    <script src="JS/emails.js"></script>
+    <script src="JS/scripts.js"></script>
+
+
 </body>
 </html>
