--- a/serial.html
+++ b/serial.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pesquisa Serial</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="serial.css">
+    <link rel="stylesheet" href="CSS/serial.css"> 
+    <link rel="stylesheet" href="CSS/styles.css">
+    
     <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
@@ -17,9 +18,11 @@
                 <ul>
                     <li><a href="index.html">Página Principal</a></li>
                     <li><a href="serial.html">Pesquisa Serial</a></li>
+                    <li><a href="lvp.html">Pesquisa PA (LVP)</a></li>
                     <li><a href="os.html">Abrir OS</a></li>
                     <li><a href="nf.html">Baixar NF</a></li>
                     <li><a href="visao.html">Romaneio Visão</a></li>
+
 
 
                 </ul>
@@ -67,7 +70,7 @@
             </section>
         </main>
     </div>
-    <script src="scripts.js"></script>
+    <script src="JS/scripts.js"></script>
 
 </body>
 </html>
