--- a/automacoes.html
+++ b/automacoes.html
@@ -24,6 +24,7 @@
                     <li><a href="garantia.html">Definir garantia</a></li>
                     <li><a href="verificarnf.html">Verificar NF</a></li>
                     <li><a href="revendagarantia.html">Definir Garantia Revenda</a></li>
+                    <li><a href="conferencia-valores.html">Conferir valores unitario</a></li>
                 </ul>
             </nav>
         </aside>
