Revise welcome message in index.html
Updated welcome message to better reflect purpose.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <main class="content">
             <section id="emails">
                 <h1>Bem vindo(a) WDC Ajudas</h1>
-                <p>Criado para auxiliar os membros da equipe, focado principalmente no SAC.</p>
+                <p>WDC AJUDAS - Criado para auxiliar o colaborador em suas atividades diarias.</p>
 
                 <!-- Aqui você pode incluir o formulário ou conteúdo do gerador de e-mails -->
                 <div id="email-template-container">
@@ -46,3 +46,4 @@
     <script src="JS/scripts.js"></script>
 </body>
 </html>
+
