--- a/index.html
+++ b/index.html
@@ -1,49 +1,180 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emails Automáticos</title>
-    <link rel="stylesheet" href="CSS/serial.css">
-    <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="stylesheet" href="CSS/garantiafabricante.css">
-    <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>WDC Ajudas — Suporte ao SAC</title>
+  <meta name="description" content="Auxiliar a equipe do SAC — recursos, atalhos e contato rápido." />
+  <meta name="theme-color" content="#0b63ff" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>W</text></svg>">
+  <!-- Open Graph -->
+  <meta property="og:title" content="WDC Ajudas — Suporte ao SAC">
+  <meta property="og:description" content="Recursos e atalhos para otimizar o atendimento do SAC.">
+  <meta property="og:type" content="website">
 </head>
 <body>
-    <div class="container">
-        <!-- Barra lateral esquerda -->
-        <aside class="sidebar">
-            <input type="text" placeholder="Pesquisar..." class="search-bar">
-            <nav class="nav">
-                <ul>
-                    <li><a href="index.html">Página Principal</a></li>
-                    <li><a href="atalhos.html">Atalhos</a></li>
-                    <li><a href="emails.html">Emails Automáticos</a></li>
-                    <li><a href="automacoes.html">Automações</a></li>
-                    <li><a href="pesquisas.html">Pesquisas</a></li>
-                    <li><a href="garantiafabricante.html">Pesquisa Fabricante</a></li>
-                </ul>
-            </nav>
-        </aside>
+  <a class="skip-link" href="#main">Ir para o conteúdo</a>
 
-        <!-- Conteúdo principal -->
-        <main class="content">
-            <section id="emails">
-                <h1>Bem vindo(a) WDC Ajudas</h1>
-                <p>WDC AJUDAS - Criado para auxiliar o colaborador em suas atividades diarias.</p>
+  <header class="site-header" role="banner">
+    <div class="container header-inner">
+      <a class="brand" href="#" aria-label="WDC Ajudas - Início">
+        <svg class="logo" width="40" height="40" viewBox="0 0 100 100" aria-hidden="true" focusable="false">
+          <rect width="100" height="100" rx="20" fill="#0b63ff"/>
+          <text x="50" y="62" text-anchor="middle" font-family="Inter, system-ui, sans-serif" font-weight="700" font-size="60" fill="#fff">W</text>
+        </svg>
+        <span class="brand-text">WDC Ajudas</span>
+      </a>
 
-                <!-- Aqui você pode incluir o formulário ou conteúdo do gerador de e-mails -->
-                <div id="email-template-container">
-                    <!-- Template de e-mails aparecerão aqui conforme a seleção -->
-                </div>
-            </section>
-        </main>
+      <button class="nav-toggle" id="navToggle" aria-expanded="false" aria-controls="primaryNav">
+        <span class="sr-only">Abrir menu</span>
+        <svg width="28" height="28" viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M4 6h16M4 12h16M4 18h16" stroke="#0b63ff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </button>
+
+      <nav id="primaryNav" class="primary-nav" role="navigation" aria-label="Navegação principal">
+        <ul class="nav-list">
+          <li><a href="#recursos">Recursos</a></li>
+          <li><a href="#atualizacoes">Atualizações</a></li>
+          <li><a href="#faq">FAQ</a></li>
+          <li><a href="#contato" class="btn btn-outline">Contato</a></li>
+        </ul>
+      </nav>
     </div>
-    <script src="JS/sac.js"></script>
-    <script src="JS/apoio_vendas.js"></script>
-    <script src="JS/emails.js"></script>
-    <script src="JS/scripts.js"></script>
+  </header>
+
+  <main id="main" class="main">
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="container hero-grid">
+        <div class="hero-content">
+          <h1 id="hero-title">Ferramentas e atalhos para agilizar o SAC</h1>
+          <p class="lead">Guias rápidos, modelos de resposta e uma central de recursos para sua equipe atender com eficiência e empatia.</p>
+          <p class="hero-actions">
+            <a href="#recursos" class="btn btn-primary">Ver recursos</a>
+            <a href="#contato" class="btn btn-ghost">Fale conosco</a>
+          </p>
+        </div>
+
+        <div class="hero-illustration" aria-hidden="true">
+          <!-- Ilustração SVG leve embutida (sem requisição extra) -->
+          <svg viewBox="0 0 600 400" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
+            <rect x="0" y="0" width="600" height="400" rx="12" fill="#f6f9ff"/>
+            <g transform="translate(40,40)" fill="none" stroke="#dbe9ff" stroke-width="2">
+              <rect x="0" y="0" width="520" height="320" rx="8"/>
+            </g>
+            <g transform="translate(80,100)">
+              <rect width="200" height="24" rx="6" fill="#0b63ff" opacity="0.12"/>
+              <rect y="40" width="340" height="20" rx="6" fill="#e9f2ff"/>
+              <rect y="70" width="300" height="20" rx="6" fill="#eef6ff"/>
+            </g>
+          </svg>
+        </div>
+      </div>
+    </section>
+
+    <section id="recursos" class="section container">
+      <h2 class="section-title">Recursos principais</h2>
+      <p class="section-sub">Ferramentas que sua equipe usa diariamente, organizadas e fáceis de acessar.</p>
+
+      <div class="cards-grid">
+        <article class="card" tabindex="0" aria-labelledby="card1-title">
+          <h3 id="card1-title">Modelos de Resposta</h3>
+          <p>Respostas padronizadas e personalizáveis para os casos mais comuns.</p>
+          <a class="card-link" href="#contato">Solicitar modelo</a>
+        </article>
+
+        <article class="card" tabindex="0" aria-labelledby="card2-title">
+          <h3 id="card2-title">Guia de Escalonamento</h3>
+          <p>Passo a passo para quando encaminhar um caso para o time técnico.</p>
+          <a class="card-link" href="#faq">Ver guia</a>
+        </article>
+
+        <article class="card" tabindex="0" aria-labelledby="card3-title">
+          <h3 id="card3-title">Atalhos e Macros</h3>
+          <p>Conjunto de comandos rápidos para reduzir tempo de atendimento.</p>
+          <a class="card-link" href="#recursos">Explorar</a>
+        </article>
+      </div>
+    </section>
+
+    <section id="atualizacoes" class="section alt-bg">
+      <div class="container">
+        <h2 class="section-title">Últimas atualizações</h2>
+        <ul class="updates-list" aria-live="polite">
+          <li><strong>2025-11-01</strong> — Novo modelo de resposta para reembolso.</li>
+          <li><strong>2025-09-15</strong> — Guia de escalonamento reorganizado.</li>
+          <li><strong>2025-07-02</strong> — Inclusão de macros para casos críticos.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="faq" class="section container">
+      <h2 class="section-title">Perguntas Frequentes</h2>
+      <div class="faq">
+        <details>
+          <summary>Como solicito um novo modelo?</summary>
+          <p>Use o formulário de contato abaixo ou fale com o coordenador do SAC. Inclua título, objetivo e contexto do atendimento.</p>
+        </details>
+
+        <details>
+          <summary>Como acessar os atalhos no sistema?</summary>
+          <p>Verifique nas preferências do seu sistema ou na seção "Atalhos e Macros" para instruções passo a passo.</p>
+        </details>
+      </div>
+    </section>
+
+    <section id="contato" class="section contact-section alt-bg">
+      <div class="container contact-grid">
+        <div class="contact-info">
+          <h2>Fale com a equipe</h2>
+          <p>Precisa de algo específico? Envie uma mensagem que retornaremos o contato.</p>
+          <ul class="contact-meta">
+            <li><strong>Email:</strong> suporte@seudominio.com</li>
+            <li><strong>Telefone:</strong> (11) 99999-9999</li>
+          </ul>
+        </div>
+
+        <form id="contactForm" class="contact-form" novalidate>
+          <label for="name">Nome</label>
+          <input id="name" name="name" type="text" required minlength="2" placeholder="Seu nome">
+
+          <label for="email">Email</label>
+          <input id="email" name="email" type="email" required placeholder="seu@exemplo.com">
+
+          <label for="subject">Assunto</label>
+          <input id="subject" name="subject" type="text" required placeholder="Assunto da solicitação">
+
+          <label for="message">Mensagem</label>
+          <textarea id="message" name="message" rows="5" required placeholder="Descreva sua solicitação"></textarea>
+
+          <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="reset" class="btn btn-outline">Limpar</button>
+          </div>
+
+          <p id="formStatus" class="form-status" aria-live="polite"></p>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>© <span id="year"></span> WDC Ajudas — Criado para auxiliar a equipe do SAC</p>
+      <nav aria-label="Rodapé">
+        <ul class="footer-links">
+          <li><a href="#recursos">Recursos</a></li>
+          <li><a href="#faq">FAQ</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
+
+  <script src="js/main.js" defer></script>
 </body>
 </html>
-
