--- a/comprar-lista.html
+++ b/comprar-lista.html
@@ -10,39 +10,57 @@
     <link rel="icon" href="imgs/wdc.png" type="image/x-icon">
 </head>
 <body>
-    <div class="container">
-        <!-- Barra lateral esquerda -->
-        <aside class="sidebar">
-            <input type="text" placeholder="Pesquisar..." class="search-bar">
-            <nav class="nav">
-                <ul>
-                    <li><a href="index.html">Página Principal</a></li>
-                    <li><a href="comprar-lista.html">Comparar Lista</a></li>
-                    <li><a href="adds.html">Adicionar S</a></li>
-                    <li><a href="garantia.html">Definir Garantia</a></li>
-                    <li><a href="verificarnf.html">Verificar NF</a></li>
-                    <li><a href="revendagarantia.html">Definir Garantia Revenda</a></li>
-                </ul>
-            </nav>
-        </aside>
+    <header class="main-header">
+        <div class="logo">WDC AJUDAS</div>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Página Principal</a></li>
+                
+                <li><a href="emails.html">Script de E-mails</a></li>
 
-        <!-- Conteúdo principal -->
-        <div class="content">
-            <h3>Comparar Listas</h3>
-            <label for="lista1">Lista 1:</label>
-            <textarea id="lista1" rows="10" placeholder="Insira os itens da lista 1, um por linha"></textarea>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn active">Automação/Atalhos</a>
+                    <div class="dropdown-content">
+                        <a href="atalhos.html">Atalhos</a>
+                        <a href="comprar-lista.html">Comparar Lista</a>
+                        <a href="adds.html">Adicionar S</a>
+                        <a href="garantia.html">Definir Garantia</a>
+                        <a href="verificarnf.html">Verificar NF</a>
+                        <a href="revendagarantia.html">Definir Garantia Revenda</a>
+                        <a href="conferencia-valores.html">Conferir Valores Unitário</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Pesquisas</a>
+                    <div class="dropdown-content">
+                        <a href="serial.html">Pesquisa Serial</a>
+                        <a href="lvp.html">Pesquisa PA (LVP)</a>
+                        <a href="os.html">Abrir OS</a>
+                        <a href="nf.html">Baixar NF</a>
+                        <a href="visao.html">Romaneio Visão</a>
+                        <a href="garantiafabricante.html">Pesquisa Fabricante</a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+        <input type="text" placeholder="Pesquisar..." class="search-bar">
+    </header>
+    
+    <main class="content">
+        <h3>Comparar Listas</h3>
+        <label for="lista1">Lista 1:</label>
+        <textarea id="lista1" rows="10" placeholder="Insira os itens da lista 1, um por linha"></textarea>
 
-            <label for="lista2">Lista 2:</label>
-            <textarea id="lista2" rows="10" placeholder="Insira os itens da lista 2, um por linha"></textarea>
+        <label for="lista2">Lista 2:</label>
+        <textarea id="lista2" rows="10" placeholder="Insira os itens da lista 2, um por linha"></textarea>
 
-            <button id="comparar-btn">Comparar Listas</button>
+        <button id="comparar-btn">Comparar Listas</button>
 
-            <div id="result" class="result-box">
-                <p>Itens presentes na Lista 1, mas não na Lista 2:</p>
-                <textarea id="diferenca-itens" rows="10" readonly></textarea>
-            </div>
+        <div id="result" class="result-box">
+            <p>Itens presentes na Lista 1, mas não na Lista 2:</p>
+            <textarea id="diferenca-itens" rows="10" readonly></textarea>
         </div>
-    </div>
+    </main>
 
     <script>
         document.getElementById('comparar-btn').addEventListener('click', function () {
